package com.fei.main.part3.section13;

import com.fei.main.part3.section13.Car;

/**
 * 大客车
 * @author xurunfei
 * @date 2017/12/1.
 */
public class BigCar implements Car {
    @Override
    public void getRook() {
        System.out.println("大客车开始生产.......");
    }
}
