package com.fei.main.part3.section13.factory;

import com.fei.main.part3.section13.Car;

/**
 * 客车工厂
 * @author xurunfei
 * @date 2017/12/1.
 */
public interface CarFactory {
    Car createCar();
}
